<?xml version="1.0"?>
<package>
  <name>spin_hokuyo</name>
  <version>0.0.0</version>
  <description>
    This package enables a 2D Hokuyo laser, connected to a Dynamixel servo motor, to produce a 3D point cloud that can
    be visualized in rviz and used to make an octomap.
  </description>

  <maintainer email="sbertuss@stevens.edu">Sarah Bertussi</maintainer>
  <maintainer email="pszenher@stevens.edu">Paul Szenher</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamixel_driver</run_depend>

  <export>

  </export>
</package>
