<package>
  <name>laser_assembler</name>
  
  <description>
    Provides nodes to assemble point clouds from either LaserScan or PointCloud messages
  </description>
  
  <version>1.7.4</version>
  
  <author>Vijay Pradeep</author>
  <maintainer email="jon.binney@gmail.com">Jonathan Binney</maintainer>
  
  <license>BSD</license>
  <url>http://ros.org/wiki/laser_assembler</url>
  
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pluginlib</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
  </export>
</package>
