<?xml version="1.0"?>
<package>
  <name>spin_hokuyo</name>
  <version>0.0.0</version>
  <description>The cleaned up tilter package</description>

  <maintainer email="sarah@todo.todo">sarah</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamixel_driver</run_depend>

  <export>

  </export>
</package>
